# roleforge

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md  launch.json
app/: config.py  container.py  main.py
app/adapters/: anthropic_llm.py  docx_resume.py  experience_docs.py  google_auth.py  google_drive.py  google_llm.py  google_sheets.py  jd_source.py  llm_base.py  weasyprint_pdf.py
app/domain/: models.py  ports.py
app/runtime/: jobs.py
app/security/: cf_access.py  ssrf.py
app/templates/: cover_letter.html  match_report.md.j2  pdf.css  resume.html
app/usecases/: check_duplicate.py  download_file.py  errors.py  generate_application.py  generate_application_answers.py  generate_interview_prep.py  list_applications.py  regenerate_application.py  update_application_status.py
app/web/: deps.py  routers.py  schemas.py
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/components/: ApplicationCard.tsx  ApplicationDetail.tsx  ApplicationQuestionsPanel.tsx  DownloadButtons.tsx  DuplicateDialog.tsx  GenerateForm.tsx  InterviewPrepButton.tsx  ProgressPanel.tsx  ProviderToggle.tsx  RegenerateButton.tsx  ResultPanel.tsx  SkillBadges.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  tabs.tsx  textarea.tsx
frontend/src/lib/: api.ts  config.ts  format.ts  storage.ts  types.ts  useJobPoll.ts
frontend/src/pages/: _app.tsx  history.tsx  index.tsx
frontend/src/styles/: globals.css
scripts/: gen_sample_resume.py  get_refresh_token.py  setup_drive.py  smoke_anthropic.py  smoke_drive.py  smoke_e2e.py  smoke_experience_docs.py  smoke_sheets.py  upload_experience_docs.py
tests/: conftest.py  test_container.py  test_docx_renderer.py  test_download_file.py  test_generate_application.py  test_generate_application_answers.py  test_generate_application_failure.py  test_generate_interview_prep.py  test_google_sheets_update_status.py  test_llm_base.py  test_regenerate_application.py  test_update_application_status.py
