[project]
name = "job-app-generator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.32.*",
    "pydantic==2.*",
    "pydantic-settings==2.*",
    "anthropic==0.40.*",
    "google-api-python-client==2.*",
    "google-auth==2.*",
    "httpx==0.27.*",
    "weasyprint==63.*",
    "jinja2==3.*",
    "pyjwt[crypto]==2.*",
]

[project.optional-dependencies]
dev = [
    "ruff==0.7.*",
    "mypy==1.13.*",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL", "RUF"]
ignore = [
    "PLR0913",  # use-case constructors take many ports; that's the design
    "PLR2004",  # magic-value comparisons are fine in adapters
    "B008",     # FastAPI Depends/Query in defaults is the framework pattern
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "googleapiclient.*",
    "google.oauth2.*",
    "weasyprint.*",
    "anthropic.*",
    "jwt.*",
]
ignore_missing_imports = true
